task/fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   margin: 0 auto;
   box-sizing: border-box;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 /* #root {
